--- a/02-Architectures/source.tex
+++ b/02-Architectures/source.tex
@@ -49,9 +49,11 @@ Nous pourrons ainsi définir en pratique la notion d'architecture modulaire non-
 Le modèle de cartes auto-organisatrices a été initialement développé par Kohonen \parencite{Kohonen1982}~; nous utiliserons les termes cartes de Kohonen et SOM de façon équivalente pour désigner ce modèle initial.
 Une carte de Kohonen est un algorithme de quantification vectorielle. 
 Les algorithmes de quantification vectorielle cherchent à représenter un ensemble de données d'entrées issues d'un espace $\mathcal{D}$ en un nombre réduit de vecteurs codes, appelés prototypes.
+
+
 Les cartes auto-organisatrices y ajoutent une topologie sur laquelle s'appuie cette représentation de l'espace d'entrée. 
-Les prototypes $\w$ sont alors positionnés sur les n\oe{}uds d'un graphe et indexés par une position $p$. Ce graphe se présente en général comme une grille de faible dimension, par exemple une grille 2D, définissant une correspondance directe entre la dimension de la carte et les positions $p$ des n\oe{}uds
-(\emph{mapping}). 
+Les prototypes $\w$ sont alors positionnés sur les n\oe{}uds d'un graphe.
+Ce graphe constitue une représentation discrète d'un espace de faible dimension~; il s'agit par exemple d'une grille 2D. Chaque n\oe{}ud est indexé par une position $p$ de faible dimension, et une distance est définie dans la carte.
 Des exemples de topologies de SOM 1D et 2D sont par exemple illustrées en figure~\ref{fig:topo}.
 
 Avant apprentissage, les prototypes sont initialisés aléatoirement dans l'espace d'entrée.
