--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,48 +1,54 @@
 \chapter*{Conclusion}
 
 Cette thèse se place dans un but d'exploration de mécanismes de calcul et d'apprentissage pouvant émerger de l'association de modules en architecture, ici à partir de cartes auto-organisatrices.
-Dans une architecture modulaire, l'apprentissage est réalisé par l'interconnexion des modules, et non supervisés par un processus extérieur. Nous voulions également pouvoir intégrer des connexions rétroactives entre les modules afin d'apporter l'aspect non-hiérarchique, inspiré des rétroactions existant dans le cortex cérébral. 
-L'utilisation des SOM est en particulier motivée par leur capacité à représenter un espace d'entrée en une information positionnelle de faible dimension. Cette information rejoint l'organisation observée dans le cortex cérébral, et se place comme une information simple à transmettre au sein d'une architecture.
-Les travaux menés précédemment dans l'équipe de recherche, en \cite{menard05,khouzam_2013,baheux_towards_2014} ont proposé un modèle original d'interface entre cartes, s'appuyant sur une recherche de consensus au sein de l'architecture. L'objectif de la thèse est de continuer le développement de cette architecture et d'analyser les mécanismes d'organisation émergeant des règles de calcul du modèle. 
+Dans une architecture modulaire, l'apprentissage est réalisé par l'interconnexion des modules, de façon non supervisée. Nous voulions également pouvoir intégrer des connexions rétroactives entre les modules afin d'apporter l'aspect non-hiérarchique, inspiré des rétroactions existant dans le cortex cérébral.
+L'utilisation de cartes auto-organisatrices en tant que modules est en particulier motivée par leur capacité à représenter un espace d'entrée en une information positionnelle de faible dimension. Cette information rejoint l'organisation observée dans le cortex cérébral, et se place comme une information simple à transmettre au sein d'une architecture.
+Les travaux menés précédemment dans l'équipe de recherche, en \cite{menard05,khouzam_2013,baheux_towards_2014} ont proposé un modèle original d'interface entre cartes, s'appuyant sur une recherche de consensus au sein de l'architecture. Cette thèse se place dans la continuité de ces travaux et souhaite développer le modèle d'architecture et analyser les mécanismes d'organisation émergeant des règles de calcul du modèle. 
 
 
-Ce manuscrit présente CxSOM \emph{Consensus-driven multi-som}. Ce modèle permet d'associer des cartes en architecture modulaires.
-Nous avons suivi une démarche ascendante~: à partir des architectures existantes et des modèles étudiés dans l'équipe de recherche, nous avons proposé le modèle d'architecture de cartes auto-organisatrices CxSOM, puis avons étudié expérimentalement son comportement sur des blocs de base, en vue d'un développement futur.
+Ce manuscrit présente CxSOM \emph{Consensus-driven multi-SOM}. Ce modèle permet d'associer des cartes en architecture modulaires.
+Nous avons suivi une démarche de construction~: à partir des architectures existantes et des modèles étudiés dans notre équipe de recherche, nous avons proposé le modèle d'architecture CxSOM, puis avons étudié expérimentalement son comportement sur des blocs de base, en vue d'un développement futur.
 
 Dans cette démarche, le chapitre~\ref{chap:architectures} se présente comme une revue des modèles existants d'architectures hiérarchiques et non-hiérarchiques construites à base de cartes auto-organisatrices. 
-Nous avons unifié les notations de ces modèles issus de différents domaines de l'informatique, afin de préciser leurs appellations hiérarchiques et non-hiérarchiques. Cette revue nous a permis d'identifier les mécanismes et structures communes à ces architectures.
+Nous avons unifié les notations de ces modèles issus de différents domaines de l'informatique. Cette revue nous a permis d'identifier les mécanismes et structures communs à ces architectures.
 
-La première contribution de cette thèse est l'élaboration et l'étude du modèle CxSOM, détaillé au chapitre~\ref{chap:modele}.
-Ce modèle utilise la position du BMU comme seule information transmise entre les cartes. Cette position est une valeur 1D ou 2D. Aucun travail à notre connaissance n'avait utilisé uniquement la position du BMU comme interface pour construire des architectures de cartes comportant des rétroactions.
-De plus, nous avons introduit un mécanisme original d'interface entre carte par une recherche de consensus entre les cartes d'une architecture, la relaxation, qui apporte un comportement dynamique dans l'architecture.
+
+La première contribution de cette thèse est le développement et l'étude du modèle CxSOM, détaillé au chapitre~\ref{chap:modele}, s'appuyant sur le modèle initialement présenté en \cite{baheux_towards_2014}.
+Ce modèle permet de construire une architecture de cartes, en utilisant la position du BMU comme seule information transmise entre les cartes. 
+Cette position est une valeur 1D ou 2D. Aucun travail à notre connaissance n'avait utilisé uniquement la position du BMU comme interface pour construire des architectures de cartes comportant des rétroactions.
+Le modèle CxSOM introduit un mécanisme original de recherche de consensus entre les cartes d'une architecture, la relaxation, qui apporte un comportement dynamique dans l'architecture.
 La relaxation va alors dans le sens de la création d'une architecture autonome.
 Nous avons observé de façon détaillée le mécanisme de relaxation au chapitre \ref{chap:relaxation} afin de valider ce mécanisme comme une recherche de BMU.
 
 La seconde contribution de la thèse est l'élaboration d'une méthodologie d'étude de l'architecture et d'analyse de son apprentissage. 
-Nous avons choisi de nous intéresser à l'apprentissage associatif de données multimodales, l'aspect multisensoriel étant une motivation pour créer des architectures non-hiérarchiques. 
-Chaque carte de l'architecture prend une entrée externe. 
-Le but de l'apprentissage associatif pour chaque module est d'apprendre une représentation de leur entrée externe, tout en apprenant les relations entre les entrées au sein de l'architecture.
-Afin de mettre en évidence et de quantifier comment CxSOM encode les relations entre entrées au sein de l'architecture, nous avons proposé des représentations adaptées. Pour cela, nous nous appuyons sur la considération des entrées multimodales et des réponses des cartes comme des variables aléatoires obtenues lors de phases de test. Cette méthode est présentée au chapitre \ref{chap:repr}.
-Nous avons modélisé les relations entre les entrées sous forme d'une variable latente, $U$, paramétrant le modèle sans perte d'information. La mise en évidence de l'apprentissage d'une relation entre les entrées par l'architecture revient alors à chercher comment l'architecture a encodé $U$ au sein des cartes.
+Nous avons choisi de nous intéresser à l'apprentissage associatif de données multimodales, l'aspect multisensoriel étant une motivation pour créer des architectures non-hiérarchiques. Chaque carte de l'architecture prend une entrée externe. 
+Le but de l'apprentissage associatif est pour chaque module d'apprendre une représentation de leur entrée externe, tout en apprenant les relations entre les entrées au sein de l'architecture.
+
+
+Afin de mettre en évidence et de quantifier comment CxSOM encode les relations entre entrées, nous avons proposé des représentations adaptées. Nous nous appuyons sur la description des entrées multimodales et des réponses des cartes par des variables aléatoires obtenues lors de phases de test. Cette méthode est présentée au chapitre \ref{chap:repr}.
+Nous avons modélisé les relations entre les entrées sous forme d'une variable latente, $U$, paramétrant le modèle sans perte d'information. La mise en évidence de l'apprentissage d'une relation entre les entrées par l'architecture revient alors à chercher comment l'architecture a encodé la variable latente $U$ au sein des cartes.
 Ensuite, nous avons souligné l'importance de visualiser une organisation dans les réponses des cartes, en particulier par les BMU, et non seulement dans les poids des cartes comme la méthode classique d'évaluation des SOM.
-Cette méthodologie nous a amenée à étudier au chapitre~\ref{chap:indicateur} des mesures statistiques permettant de quantifier l'apprentissage des relations entre entrées par une architecture de cartes.
-Nous avons envisagé deux coefficients quantifiant la propriété que $U$ est une fonction du BMU dans chaque carte.
-Nous avons proposé un premier indicateur, le coefficient d'incertitude, qui est une version normalisée de l'information mutuelle.
-Le second indicateur que nous avons proposé est le ratio de corrélation. 
+Pour une architecture de deux et trois cartes, nous avons mis en évidence que l'apprentissage associatif se traduit par une relation fonctionnelle entre $U$ et le BMU dans chaque carte. 
+
+
+Le chapitre~\ref{chap:indicateur} présente des mesures statistiques permettant de quantifier l'apprentissage des relations entre entrées par une architecture de cartes, en s'appuyant sur la description de la réponse des cartes par des variables aléatoires.
+Nous avons envisagé deux coefficients quantifiant la propriété que $U$ est une fonction du BMU dans chaque carte~: le coefficient d'incertitude, qui est une version normalisée de l'information mutuelle, et le ratio de corrélation.
 Ce second indicateur s'est avéré plus adapté que le coefficient d'incertitude pour les variables continues telles que celles présentes dans notre modèle, en notant toutefois que sa valeur devra être utilisée en comparaison à des valeurs d'entrées, et non prise de manière absolue. 
 Cet indicateur numérique permettra de comparer des expériences entre elles et d'optimiser automatiquement les paramètres d'apprentissage de l'architecture.
 Nous avons mis en évidence par le calcul de l'information mutuelle entre $U$ et $\bmu$ que chaque carte perd  globalement de l'information sur le modèle $U$, due à la perte de précision sur la quantification vectorielle de l'entrée externe. On voudra pouvoir mesurer seulement le gain d'information sur $U$ dans une carte, ou dans toute l'architecture, et nous suggérons aux travaux futurs de s'intéresser à d'autres mesures de l'information mutuelle entre les caractéristiques des cartes pour évaluer l'apprentissage.
-Notons que cette méthodologie n'est pas spécifique à CxSOM. Les réflexions et éléments de représentation proposés peuvent se transposer à d'autres algorithmes d'apprentissage non-supervisés.
-
+Notons que cette méthode d'analyse du modèle n'est pas spécifique à CxSOM. Les éléments de représentation et indicateurs proposés, notamment l'information mutuelle peuvent se transposer à d'autres algorithmes d'apprentissage non-supervisés.
 
 Cette méthode d'analyse nous a fourni un cadre permettant de mieux analyser le comportement d'architectures CxSOM élémentaires de deux et trois cartes en une dimension, apprenant sur des entrées en une dimension.
-Ces expériences sont présentées au chapitre \ref{chap:analyse} et \ref{chap:analyse2D}.
-Nous avons dégagé des comportements d'organisation à deux échelles, qui nous apparaissent comme inhérents aux règles de calculs définies dans CxSOM. Nous avons également mis en évidence l'influence des rayons de voisinage sur les comportements d'apprentissage.
-Nous avons montré qu'une architecture CxSOM est capable de générer une prédiction dans une des cartes de l'architecture à laquelle on n'a pas présenté d'entrée externe lors du test. 
+Ces expériences sont présentées aux chapitres \ref{chap:analyse} et \ref{chap:analyse2D}.
+Nous avons dégagé des comportements d'organisation à deux échelles, qui nous apparaissent comme inhérents aux règles de calculs définies dans CxSOM. Chaque carte est globalement organisée selon son entrée externe. Les BMU se répartissent dans un ensemble de zones de la carte en fonction de cette entrée externe, séparées par des zones mortes. Au sein de chaque région, les BMU sont définis en fonction de l'entrée contextuelle. 
+Cette organisation fait que chaque carte définit son BMU en fonction de toutes les entrées de l'architecture, et non seulement son entrée externe. Ce comportement marque l'apprentissage associatif des entrées au sein de l'architecture.
+Pour observer ce comportement, nous devons prendre le rayon de voisinage externe $h_e$ supérieur au rayon de voisinage contextuel. Ces deux élasticités permettent aux poids contextuels de s'organiser de façon subordonnée aux poids externes.
+Nous avons ensuite montré qu'une architecture CxSOM est capable de générer une prédiction dans une des cartes de l'architecture à laquelle on n'a pas présenté d'entrée externe lors du test. 
 Grâce aux rétroactions, une carte acquiert une capacité de prise de décision sans avoir besoin d'un algorithme supplémentaire analysant la sortie des cartes. 
-La prédiction s'effectue localement, au niveau d'une carte~: les autres cartes de l'architecture n'ont pas besoin de savoir si une carte prend ou non son entrée externe. 
+La prédiction s'effectue localement, au niveau d'une carte~: les autres cartes de l'architecture n'ont pas besoin de savoir si les autres cartes prennent ou non leur entrée externe.
 Enfin, grâce aux rétroactions, la prédiction est possible pour n'importe quel carte de l'architecture. Cette capacité n'est pas permise par des architectures hiérarchiques ou des cartes classiques.
-Enfin, nous avons mis en évidence au chapitre~\ref{chap:analyse2D} que le comportement observé sur les cartes en une dimension s'étend aux cartes en deux dimensions. Ce comportement est prometteur pour la mise en pratique des architectures de cartes sur des données de plus grande dimension.
+Enfin, nous avons mis en évidence au chapitre~\ref{chap:analyse2D} que le comportement observé sur les cartes en une dimension s'étend bien aux cartes en deux dimensions.
+Ce comportement est prometteur pour la mise en pratique des architectures de cartes sur des données de plus grande dimension.
 
 
 \subsection*{CxSOM, un pari gagnant ?}
@@ -50,25 +56,25 @@ Enfin, nous avons mis en évidence au chapitre~\ref{chap:analyse2D} que le compo
 Le modèle CxSOM proposé dans cette thèse apporte un nouveau paradigme de construction d'architecture modulaire de cartes, exploitant pleinement la représentation topographiquement ordonnée d'une carte auto-organisatrice.
 Dans ce modèle, chaque carte encode une représentation de son entrée externe, extrayant une abstraction de chaque espace, et encode également les relations entre les entrées dans chaque carte de l'architecture. 
 Nous avons mis en lumière que cet apprentissage des représentations de chaque modalité et les rétroactions permettent un comportement original pour des cartes auto-organisatrices~: une carte de l'architecture est capable de prédire une valeur à partir de ses connexions contextuelles. Cette capacité de prédiction en l'absence d'une entrée externe est prometteuse pour des applications, par exemple de robustesse à la perte d'une entrée, ou pour des tâches de prise de décision.
-La formation de motifs de poids contextuels, marquant un apprentissage, semble se généraliser à des architectures de trois, quatre ou dix cartes.
-Cette formation de motifs ainsi que l'organisation à plusieurs échelles d'une carte semblent également se transposer aux cartes en deux dimensions, tout en proposant des mécanismes d'organisation plus diversifiés qu'en 1D.
-Ces deux observations laissent envisager un passage possible à de grandes architectures, à accompagner d'une étude et optimisation des paramètres. 
+La formation de motifs de poids contextuels, marquant l'apprentissage des associations, semble se généraliser à des architectures de trois, quatre ou dix cartes.
+Cette formation de motifs ainsi que l'organisation à plusieurs échelles d'une carte semblent également se transposer aux cartes en deux dimensions, qui présentent également des motifs d'organisation plus variés qu'en 1D.
+Ces deux observations laissent envisager un passage possible à de grandes architectures, à accompagner d'une étude paramétrique approfondie.
 Notons que les travaux d'analyse de CxSOM dont nous avons présenté les résultats ont été accompagnés d'un travail d'élaboration, en collaboration avec Hervé Frezza-Buet, d'une librairie C++ et python permettant le calcul et les tracés des nombreuses variables d'état qui composent une architecture de cartes.
-Cette librairie \footnote{\url{https://github.com/HerveFrezza-Buet/cxsom}} facilitera grandement l'étude et la conception d'architectures comportant de nombreuses cartes.
+Cette librairie \footnote{\url{https://github.com/HerveFrezza-Buet/cxsom}}, aujourd'hui plus aboutie qu'au moment où nous avons commencé nos expérimentations, facilitera grandement l'étude et la conception d'architectures comportant de nombreuses cartes.
 Cette étude de grandes architectures pourra s'appuyer sur les méthodes de représentation et d'analyse que nous avons proposé au cours de ce manuscrit. Notons que les indicateurs et représentations que nous avons proposées concernent l'organisation à l'échelle d'une carte. Une perspective d'amélioration de cette méthode de représentation est de chercher à évaluer une organisation d'un point de vue global à l'architecture.
 
 %Limites et perspectives 
-Les observations réalisées dans les chapitres \ref{chap:analyse},\ref{chap:indicateur} et \ref{chap:analyse2D} nous permettent également d'envisager des limitations générales au modèle actuel, qui seront des pistes d'études possibles pour une amélioration ou une application de l'architecture.
-Tout d'abord, le fait d'encoder $U$ dans chaque carte apporte de la redondance et permet la prédiction, mais il n'est pas souhaitable que $U$ soit complètement encodé dans chaque carte dans un cas général d'architecture.
-Cela induirait que la valeur encodée ne peut pas dépasser une ou deux dimensions, correspondant à la dimension des cartes. Cette limite ne pourrait être améliorée par l'augmentation du nombre de cartes, rendant l'architecture moins pertinente. 
-On voudrait plutôt que les différentes cartes apprennent collectivement une représentation distribuée de $U$, ce qui laisse la possibilité au modèle d'améliorer l'apprentissage des relations entre entrées en ajoutant des cartes à l'architecture. Cette limitation potentielle n'a pas pu être étudiée dans des architectures de seulement deux et trois cartes, mais il s'agira d'un point à vérifier et observer lors de l'étude de plus grandes architectures. 
-Une deuxième limitation est introduite par la double échelle de quantification vectorielle permettant l'apprentissage de $U$ dans chaque carte. 
-Cette double échelle introduit beaucoup de n\oe{}uds morts dans la carte, donc une perte d'unité d'apprentissage. 
-Par construction, une carte de Kohonen garde une continuité entre les valeurs des prototypes. Les n\oe{}uds morts sont donc nécessaires pour créer la double échelle, par la nature même des règles d'apprentissage d'une carte.
-Pour modifier ce point, il faudrait envisager un changement dans la nature même du module.
-L'apprentissage de l'entrée externe dans une carte sera nécessairement réduit par rapport à une carte classique, par le fait que le nombre d'unités disponibles pour l'encodage est fixé.
-Cependant, les n\oe{}uds morts apportent une fuite supplémentaire d'unités, qui pourrait éventuellement être évitée mais en adaptant le modèle de SOM.
-   
+Les observations réalisées dans les chapitres \ref{chap:analyse}, \ref{chap:indicateur} et \ref{chap:analyse2D} nous permettent également d'envisager des limitations générales au modèle actuel, qui seront des pistes d'études possibles pour envisager des améliorations ou des applications de l'architecture.
+Tout d'abord, nous avons constaté que les architectures de deux et trois cartes encodent totalement $U$ dans chaque carte.
+Cet encodage apporte de la redondance au sein de l'architecture, ce qui permet la prédiction d'entrée.
+Dans un cas général, il n'est pas souhaitable que $U$ soit complètement encodé dans chaque carte.
+Cela induirait que la valeur encodée ne peut pas dépasser une ou deux dimensions, correspondant à la dimension des cartes. Cette limite ne pourrait pas être améliorée par l'augmentation du nombre de cartes, rendant l'architecture moins pertinente. 
+On voudrait plutôt que les différentes cartes apprennent collectivement une représentation distribuée de $U$, ce qui laisse la possibilité d'améliorer l'apprentissage des relations entre entrées en ajoutant des cartes à l'architecture. Cette limitation potentielle n'a pas pu être étudiée dans des architectures de seulement deux et trois cartes, mais il s'agira d'un point à vérifier et observer lors de l'étude de plus grandes architectures. 
+
+Une deuxième limitation est introduite par la double échelle de quantification vectorielle qui permet l'apprentissage de $U$ dans chaque carte. Elle se traduit par les motifs pseudo-périodique des poids contextuels et la formation de zones de BMU.
+Cette double échelle introduit beaucoup de n\oe{}uds morts dans la carte entre les zones de BMU, donc une perte d'unité d'apprentissage.
+Les règles d'apprentissage des cartes créent une continuité entre les valeurs des prototypes.  Les n\oe{}uds morts sont donc nécessaires pour permettre les motifs de poids contextuels, par la nature même des règles d'apprentissage d'une carte.
+Pour modifier ce point, il faudrait envisager un changement dans les règles d'apprentissage de la SOM.
 
 \subsection*{Perspectives}
 
@@ -77,18 +83,17 @@ Le nombre de connexions possible au sein d'une architecture comportant un nombre
 Par ailleurs, certaines cartes peuvent ou non prendre des entrées externes, ajoutant une diversité de configurations possibles.
 Il reste également à définir des cas d'études sur lesquels étudier des architectures à grande échelle.
 L'aspect modulaire de ces architectures pourrait par exemple nous faire envisager des modules d'interaction avec l'environnement, qui traitent les entrées sensorielles et des modules d'apprentissage, en s'inspirant des structures fonctionnelles observées en biologie \parencite{Ellefsen2015NeuralMH}. 
-Des modélisations récentes du cortex sous forme de réseaux mettent l'accent sur son aspect modulaire multi-échelles \parencite{betzel_multi-scale_2017}~: le cortex semble s'organiser en une architecture dont les modules sont eux-mêmes des architectures modulaires, loin des trois modules que nous avons étudiés dans cette thèse, et motive donc la construction d'architectures de bien plus grande ampleur.
+Des modélisations récentes du cortex sous forme de réseaux mettent l'accent sur son aspect modulaire multi-échelles \parencite{betzel_multi-scale_2017}~: le cortex semble s'organiser en une architecture dont les modules sont eux-mêmes des architectures modulaires, loin des trois modules que nous avons étudiés dans cette thèse, ce qui peut motiver la construction d'architectures de bien plus grande ampleur.
 
-Un second objectif du développement d'architectures multi-cartes est également l'intégration de connexions récurrentes entre cartes, afin de traiter des données séquentielles conjointement avec leur aspect spatial. 
+Un second objectif du développement d'architectures multi-cartes est l'intégration de connexions récurrentes entre cartes, qui pourraient permettre de combiner le traitement de données séquentielles et données mutlimodales au sein d'une même architecture.
 L'utilisation de la position du BMU comme interface a été utilisée au sein de modèles de cartes récurrentes telles que SOMSD \parencite{hagenbuchner_self-organizing_2003}~; ce modèle ainsi que son adaptation sur deux cartes ont fait l'objet de travaux dans notre équipe \parencite{baheux_towards_2014, fix20}. 
-Dans ces modèles de cartes récurrentes, la carte prend en entrée un élément d'une séquence d'entrée ainsi que la position du BMU obtenu lors de l'itération précédente. 
-Les propriétés d'organisation observées sur ce type de cartes récurrentes rejoignent celles observée dans l'architecture CxSOM~: une carte distingue son BMU en fonction de l'entrée externe, mais également en fonction de sa place dans la séquence d'entrée. Par ailleurs, cette information transmise entre chaque pas de temps est homogène à celle transmise entre cartes dans l'architecture CxSOM.
+Les propriétés d'organisation observées sur ce type de cartes récurrentes rejoignent celles observée dans l'architecture CxSOM~: une carte distingue son BMU en fonction de l'entrée externe, mais également en fonction de sa place dans la séquence d'entrée. Cette information transmise entre chaque pas de temps est homogène à celle transmise entre cartes dans l'architecture CxSOM.
 Une perspective d'étude sera ainsi d'associer des connexions temporelles et des connexions multimodales au sein d'une architecture de cartes afin de traiter des données séquentielles.
 Par exemple, un inconvénient de cartes récurrentes simples est le fait qu'elles oublient une séquence une fois que cette dernière n'est plus présentée. Une architecture de cartes pourrait par exemple apporter des modules de mémoire supplémentaire pour l'apprentissage d'un ensemble de séquences et non d'une seule.
-Nous pouvons également envisager la construction d'un système d'apprentissage \og sur le long terme \fg{}, apprenant au cours du temps tout en étant capable de générer des prises de décision dans le système.
+Nous pouvons également envisager la construction d'un système d'apprentissage \og sur le long terme \fg{}, en s'inspirant des modèles proposés en \cite{parisiLL,parisi17}. Un tel système apprend au cours du temps tout en étant capable de générer des prises de décision dans le système. Les modules de l'architecture peuvent apparaître comme des modules de mémoire épisodiques et sémantiques, en choisissant différentes échelles temporelles d'apprentissage pour chaque module.
 
 
-Quels que soient les applications et développements futurs du modèle CxSOM, nos travaux contribuent plus globalement à une vision originale des cartes auto-organisatrices comme des machines d'état.
+Quels que soient les applications et développements futurs du modèle CxSOM, nos travaux contribuent plus globalement à une vision originale des cartes auto-organisatrices comme des machines à état.
 Nous les avons utilisées comme un support pour la conception d'un système d'apprentissage incluant une dynamique, qui s'éloigne de la vision classique de la SOM comme un algorithme de quantification vectorielle.
 La transmission de la seule position du BMU entre cartes est une façon élégante et simple de connecter des cartes, et les comportements d'organisation complexes observés sur des cartes 1D et 2D soulignent la force que porte une simple information positionnelle utilisée comme représentation d'un espace d'entrée.
 
